--- a/index.html
+++ b/index.html
@@ -650,13 +650,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/chess_engine.jpg"
+                  src="assets/img/portfolio/optimized/chess_engine.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/chess_engine.jpg"
+                    href="assets/img/portfolio/optimized/chess_engine.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Hoogperformante schaak engine in C++"
@@ -676,13 +676,13 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/rail_segmentation.png"
+                  src="assets/img/portfolio/optimized/rail_segmentation.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/rail_segmentation.png"
+                    href="assets/img/portfolio/optimized/rail_segmentation.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Machine Learning model die sporen kan segmenteren"
@@ -702,13 +702,13 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/deepproblog.jpg"
+                  src="assets/img/portfolio/optimized/deepproblog.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/deepproblog.jpg"
+                    href="assets/img/portfolio/optimized/deepproblog.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Neuro Symbolic AI - Visual Question Answering met behulp van DeepProbLog"
@@ -726,13 +726,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/esystant_making_assignment.png"
+                  src="assets/img/portfolio/optimized/esystant_making_assignment.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/esystant_making_assignment.png"
+                    href="assets/img/portfolio/optimized/esystant_making_assignment.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
@@ -748,13 +748,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/genetic_algorithms_convergence_graphs.png"
+                  src="assets/img/portfolio/optimized/genetic_algorithms_convergence_graphs.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/genetic_algorithms_convergence_graphs.png"
+                    href="assets/img/portfolio/optimized/genetic_algorithms_convergence_graphs.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Genetische algoritmes die met meta-heuristieken convergeren"
@@ -772,13 +772,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/ecommerce_nextjs_shop.png"
+                  src="assets/img/portfolio/optimized/ecommerce_nextjs_shop.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/ecommerce_nextjs_shop.png"
+                    href="assets/img/portfolio/optimized/ecommerce_nextjs_shop.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een e-commerce webshop gemaakt met Next.js"
@@ -796,13 +796,13 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/visual_question_answering_1.png"
+                  src="assets/img/portfolio/optimized/visual_question_answering_1.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/visual_question_answering_1.png"
+                    href="assets/img/portfolio/optimized/visual_question_answering_1.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Visual Question Answering model dat met behulp van PyTorch is getraind"
@@ -820,13 +820,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/insta-clone.png"
+                  src="assets/img/portfolio/optimized/insta-clone.webp"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/insta-clone.png"
+                    href="assets/img/portfolio/optimized/insta-clone.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Instagram clone gemaakt met React en Firebase"
