--- a/portfolio/chess_engine/index.html
+++ b/portfolio/chess_engine/index.html
@@ -79,14 +79,14 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/chess_engine.jpg"
+                      src="../../assets/img/portfolio/optimized/chess_engine.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/chess_code.png"
+                      src="../../assets/img/portfolio/optimized/chess_engine.webp"
                       alt=""
                     />
                   </div>
