--- a/portfolio/deepproblog/index.html
+++ b/portfolio/deepproblog/index.html
@@ -79,21 +79,21 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/deepproblog.jpg"
+                      src="../../assets/img/portfolio/optimized/deepproblog.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/deepproblog_confusion_matrix.png"
+                      src="../../assets/img/portfolio/optimized/deepproblog_confusion_matrix.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/deepproblog_loss_curve.png"
+                      src="../../assets/img/portfolio/optimized/deepproblog_loss_curve.webp"
                       alt=""
                     />
                   </div>
