--- a/portfolio/ecommerce/index.html
+++ b/portfolio/ecommerce/index.html
@@ -79,14 +79,14 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/ecommerce_nextjs.png"
+                      src="../../assets/img/portfolio/optimized/ecommerce_nextjs.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/ecommerce_nextjs_shop.png"
+                      src="../../assets/img/portfolio/optimized/ecommerce_nextjs_shop.webp"
                       alt=""
                     />
                   </div>
