--- a/portfolio/esystant/index.html
+++ b/portfolio/esystant/index.html
@@ -79,21 +79,21 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/esystant_browsing_assignments.png"
+                      src="../../assets/img/portfolio/optimized/esystant_browsing_assignments.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/esystant_making_assignment.png"
+                      src="../../assets/img/portfolio/optimized/esystant_making_assignment.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/esystant_example_submission.png"
+                      src="../../assets/img/portfolio/optimized/esystant_example_submission.webp"
                       alt=""
                     />
                   </div>
