--- a/portfolio/genetic-algorithms/index.html
+++ b/portfolio/genetic-algorithms/index.html
@@ -79,7 +79,7 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/genetic_algorithms_convergence_graphs.png"
+                      src="../../assets/img/portfolio/optimized/genetic_algorithms_convergence_graphs.webp"
                       alt=""
                     />
                   </div>
