--- a/portfolio/insta-clone/index.html
+++ b/portfolio/insta-clone/index.html
@@ -79,7 +79,7 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/insta-clone.png"
+                      src="../../assets/img/portfolio/optimized/insta-clone.webp"
                       alt=""
                     />
                   </div>
