--- a/portfolio/rail_segmentation/index.html
+++ b/portfolio/rail_segmentation/index.html
@@ -79,14 +79,14 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/rail_segmentation.png"
+                      src="../../assets/img/portfolio/optimized/rail_segmentation.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/rail_segmentation_network.png"
+                      src="../../assets/img/portfolio/optimized/rail_segmentation_network.webp"
                       alt=""
                     />
                   </div>
