--- a/portfolio/visual_question_answering/index.html
+++ b/portfolio/visual_question_answering/index.html
@@ -79,14 +79,14 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/visual_question_answering_1.png"
+                      src="../../assets/img/portfolio/optimized/visual_question_answering_1.webp"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/visual_question_answering_2.png"
+                      src="../../assets/img/portfolio/optimized/visual_question_answering_2.webp"
                       alt=""
                     />
                   </div>
