Optimize other images

--- a/header_home.html
+++ b/header_home.html
@@ -2,7 +2,7 @@
   <div class="d-flex flex-column">
     <div class="profile">
       <img
-        src="assets/img/JorritWillaertProfile.jpeg"
+        src="assets/img/JorritWillaertProfile.webp"
         alt=""
         class="img-fluid rounded-circle"
       />
