--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
               <img
-                src="assets/img/JorritWillaertProfile.jpeg"
+                src="assets/img/JorritWillaertProfile.webp"
                 class="img-fluid"
                 alt=""
               />
@@ -896,7 +896,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/YarnoViaene.jpg"
+                    src="assets/img/testimonials/optimized/YarnoViaene.webp"
                     class="testimonial-img"
                     alt=""
                   />
@@ -926,7 +926,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/KankshaPandey.jpeg"
+                    src="assets/img/testimonials/optimized/KankshaPandey.webp"
                     class="testimonial-img"
                     alt=""
                   />
@@ -952,7 +952,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/question_mark.png"
+                    src="assets/img/testimonials/optimized/question_mark.webp"
                     class="testimonial-img"
                     alt=""
                   />
