Make sure the .html extensions are gone

--- a/index.html
+++ b/index.html
@@ -662,9 +662,7 @@
                     title="Hoogperformante schaak engine in C++"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a
-                    href="portfolio/chess_engine/index.html"
-                    title="Meer details"
+                  <a href="portfolio/chess_engine" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -688,9 +686,7 @@
                     title="Een Machine Learning model die sporen kan segmenteren"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a
-                    href="portfolio/rail_segmentation/index.html"
-                    title="Meer details"
+                  <a href="portfolio/rail_segmentation" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -714,9 +710,7 @@
                     title="Neuro Symbolic AI - Visual Question Answering met behulp van DeepProbLog"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a
-                    href="portfolio/deepproblog/index.html"
-                    title="Meer details"
+                  <a href="portfolio/deepproblog" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -738,7 +732,7 @@
                     title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/esystant/index.html" title="Meer details"
+                  <a href="portfolio/esystant" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -760,9 +754,7 @@
                     title="Genetische algoritmes die met meta-heuristieken convergeren"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a
-                    href="portfolio/genetic-algorithms/index.html"
-                    title="Meer details"
+                  <a href="portfolio/genetic-algorithms" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -784,7 +776,7 @@
                     title="Een e-commerce webshop gemaakt met Next.js"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/ecommerce/index.html" title="Meer details"
+                  <a href="portfolio/ecommerce" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -809,7 +801,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="portfolio/visual_question_answering/index.html"
+                    href="portfolio/visual_question_answering"
                     title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
@@ -832,9 +824,7 @@
                     title="Een Instagram clone gemaakt met React en Firebase"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a
-                    href="portfolio/insta-clone/index.html"
-                    title="Meer details"
+                  <a href="portfolio/insta-clone" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
