--- a/portfolio/deepproblog/index.html
+++ b/portfolio/deepproblog/index.html
@@ -62,7 +62,7 @@
           <div class="d-flex justify-content-between align-items-center">
             <h2>Portfolio details</h2>
             <ol>
-              <li><a href="../../index.html">Home</a></li>
+              <li><a href="../../">Home</a></li>
               <li>Portfolio details</li>
             </ol>
           </div>
