Fix margin issue for 404 page

--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
       <!-- ======= Services Section ======= -->
       <section>
         <div class="container">
-          <div class="section-title" style="margin-left: 300px">
+          <div class="section-title" id="notfound">
             <h2>404 Not Found</h2>
             <h3>Oeps, deze pagina kunnen we niet vinden!</h3>
             <p>
