--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                       <i class="bi bi-chevron-right"></i>
                       <strong>Website:</strong>
                       <span
-                        ><a href="www.jorritwillaert.com"
+                        ><a href="https://www.jorritwillaert.com"
                           >www.jorritwillaert.com</a
                         ></span
                       >
