--- a/index.html
+++ b/index.html
@@ -655,14 +655,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/chess_engine.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Hoogperformante schaak engine in C++"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/chess_engine" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/chess_engine"
+                    title="Hoogperformante schaak engine in C++"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -679,14 +681,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/rail_segmentation.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Machine Learning model die sporen kan segmenteren"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/rail_segmentation" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/rail_segmentation"
+                    title="Een Machine Learning model die sporen kan segmenteren"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -703,14 +707,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/deepproblog.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Neuro Symbolic AI - Visual Question Answering met behulp van DeepProbLog"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/deepproblog" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/deepproblog"
+                    title="Neuro Symbolic AI - Visual Question Answering met behulp van DeepProbLog"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -725,14 +731,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/esystant_making_assignment.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/esystant" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/esystant"
+                    title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -747,14 +755,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/genetic_algorithms_convergence_graphs.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Genetische algoritmes die met meta-heuristieken convergeren"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/genetic-algorithms" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/genetic-algorithms"
+                    title="Genetische algoritmes die met meta-heuristieken convergeren"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -769,14 +779,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/ecommerce_nextjs_shop.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een e-commerce webshop gemaakt met Next.js"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/ecommerce" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/ecommerce"
+                    title="Een e-commerce webshop gemaakt met Next.js"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -793,16 +805,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/visual_question_answering_1.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Visual Question Answering model dat met behulp van PyTorch is getraind"
                     ><i class="bx bx-plus"></i
-                  ></a>
+                  ></a> -->
                   <a
                     href="portfolio/visual_question_answering"
-                    title="Meer details"
+                    title="Een Visual Question Answering model dat met behulp van PyTorch is getraind"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -817,14 +829,16 @@
                   alt=""
                 />
                 <div class="portfolio-links">
-                  <a
+                  <!-- <a
                     href="assets/img/portfolio/optimized/insta-clone.webp"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Een Instagram clone gemaakt met React en Firebase"
                     ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio/insta-clone" title="Meer details"
+                  ></a> -->
+                  <a
+                    href="portfolio/insta-clone"
+                    title="Een Instagram clone gemaakt met React en Firebase"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
