Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
           <div class="section-title">
             <h2>Getuigenissen</h2>
             <p>
-              Gedurende de jaren heb ik enkele mooi getuigenissen mogen
+              Gedurende de jaren heb ik enkele mooie getuigenissen mogen
               ontvangen van vrienden, klanten & partners.
             </p>
           </div>
