Add some meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="description"
     />
     <meta
-      content="IT freelancer web development software engineering machine learning data science"
+      content="IT freelancer web development software engineering machine learning data science Jorrit Willaert"
       name="keywords"
     />
 
