--- a/portfolio/deepproblog/index.html
+++ b/portfolio/deepproblog/index.html
@@ -5,8 +5,14 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Neuro Symbolic AI</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Neuro symbolic AI applicatie gemaakt door Jorrit Willaert"
+      name="description"
+    />
+    <meta
+      content="Jorrit Willaert, Neuro Symbolic AI, portfolio"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
