--- a/portfolio/ecommerce/index.html
+++ b/portfolio/ecommerce/index.html
@@ -5,8 +5,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - E-Commerce webshop</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="E-commerce applicatie voor portfolio van Jorrit Willaert"
+      name="description"
+    />
+    <meta content="Jorrit Willaert, E-Commerce, portfolio" name="keywords" />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
