--- a/portfolio/esystant/index.html
+++ b/portfolio/esystant/index.html
@@ -5,8 +5,14 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - E-Systant</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="E-Systant webapplicatie herwerkt door Jorrit Willaert"
+      name="description"
+    />
+    <meta
+      content="Jorrit Willaert, E-Systant, frontend, portfolio"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
