--- a/portfolio/insta-clone/index.html
+++ b/portfolio/insta-clone/index.html
@@ -5,8 +5,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Insta clone</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Insta clone gemaakt door Jorrit Willaert"
+      name="description"
+    />
+    <meta content="Jorrit Willaert, Insta clone, portfolio" name="keywords" />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
