--- a/portfolio/rail_segmentation/index.html
+++ b/portfolio/rail_segmentation/index.html
@@ -5,8 +5,14 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Rail segmentation</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Rail segmentation applicatie door Jorrit Willaert"
+      name="description"
+    />
+    <meta
+      content="Jorrit Willaert, Rail segmentation, portfolio"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
