--- a/portfolio/visual_question_answering/index.html
+++ b/portfolio/visual_question_answering/index.html
@@ -5,8 +5,14 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Visual Question Answering met PyTorch</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Visual Question Answering met Pytorch applicatie gemaakt door Jorrit Willaert"
+      name="description"
+    />
+    <meta
+      content="Jorrit Willaert, Visual Question Answering, portfolio"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
