--- a/portfolio/chess_engine/index.html
+++ b/portfolio/chess_engine/index.html
@@ -5,8 +5,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Schaak engine</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Schaak engine gemaakt door Jorrit Willaert"
+      name="description"
+    />
+    <meta content="Jorrit Willaert, Schaak engine, portfolio" name="keywords" />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
