--- a/portfolio/genetic-algorithms/index.html
+++ b/portfolio/genetic-algorithms/index.html
@@ -5,8 +5,14 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Jorrit Willaert - Genetic algorithms & Evolutionary Computing</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta
+      content="Genetic algorithms applicatie gemaakt door Jorrit Willaert"
+      name="description"
+    />
+    <meta
+      content="Jorrit Willaert, Genetic algorithms, portfolio"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon" />
