--- a/header.html
+++ b/header.html
@@ -39,32 +39,50 @@
     <nav id="navbar" class="nav-menu navbar">
       <ul>
         <li>
-          <a href="../../#hero" class="nav-link scrollto active"
+          <a
+            href="../../#hero"
+            class="nav-link scrollto active"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-home"></i> <span>Home</span></a
           >
         </li>
         <li>
-          <a href="../../#services" class="nav-link scrollto"
+          <a
+            href="../../#services"
+            class="nav-link scrollto"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-server"></i> <span>Wat ik doe</span></a
           >
         </li>
         <li>
-          <a href="../../#about" class="nav-link scrollto"
+          <a
+            href="../../#about"
+            class="nav-link scrollto"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-user"></i> <span>Over mij</span></a
           >
         </li>
         <li>
-          <a href="../../#skills" class="nav-link scrollto"
+          <a
+            href="../../#skills"
+            class="nav-link scrollto"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-file-blank"></i> <span>Vaardigheden</span></a
           >
         </li>
         <li>
-          <a href="../../#portfolio" class="nav-link scrollto"
+          <a
+            href="../../#portfolio"
+            class="nav-link scrollto"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
           >
         </li>
         <li>
-          <a href="../../#contact" class="nav-link scrollto"
+          <a
+            href="../../#contact"
+            class="nav-link scrollto"
+            onclick="document.querySelector('body').classList.remove('mobile-nav-active');"
             ><i class="bx bx-envelope"></i> <span>Contact</span></a
           >
         </li>
