Add phone number

--- a/index.html
+++ b/index.html
@@ -1058,11 +1058,13 @@
                   </p>
                 </div>
 
-                <!-- <div class="phone">
+                <div class="phone">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
-                </div> -->
+                  <h4>Gsm:</h4>
+                  <p>
+                    <a href="tel:+32491301271">+32 491 30 12 71</a>
+                  </p>
+                </div>
 
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7141.047635883321!2d2.8685473907794026!3d51.17372501180725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcaf8eec9938e1%3A0xd155cd6bd8800344!2sWilskerkestraat%2070%2C%208432%20Middelkerke!5e0!3m2!1sen!2sbe!4v1678903477289!5m2!1sen!2sbe"
