--- a/header_home.html
+++ b/header_home.html
@@ -33,6 +33,9 @@
         <a href="mailto:jorrit@jorritwillaert.com" class="mail"
           ><i class="bi bi-envelope"></i
         ></a>
+        <a href="tel:+32491301271" class="phone">
+          <i class="bi bi-phone"></i
+        ></a>
       </div>
     </div>
 
