Make the title a little longer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Jorrit Willaert</title>
+    <title>
+      Jorrit Willaert - IT consultant & Web Designer - Regio West-Vlaanderen
+    </title>
     <meta
       content="Jorrit Willaert is een IT-freelancer met een focus op web development en algemene software engineering. Daarnaast heeft hij ervaring met machine learning modellen en data science."
       name="description"
