Update text: not longer student

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
           <div class="section-title">
             <h2>Wat ik doe</h2>
             <p>
-              Ik ben een laatstejaarstudent burgerlijk ingenieur
-              computerwetenschappen aan de KU Leuven. Ik hou van het ontwikkelen
-              van software en het oplossen van problemen. Daarnaast ben ik erg
-              vertrouwd met web development, gaande van simpele landing pages
-              tot complexe webapplicaties. Een andere passie van mij is het
-              ontwerpen van machine learning applicaties. Dit was dan ook mijn
-              afstudeerrichting en in deze tak heb ik ook al enkele
-              studentenjobs gedaan. In mijn vrije tijd denk ik graag na over
-              startups, waaruit dan ook al enkele MVP's zijn voortgekomen.
+              Ik hou van het ontwikkelen van software en het oplossen van
+              problemen. Daarnaast ben ik erg vertrouwd met web development,
+              gaande van simpele landing pages tot complexe webapplicaties. Een
+              andere passie van mij is het ontwerpen van machine learning
+              applicaties. Dit was dan ook mijn afstudeerrichting en in deze tak
+              heb ik ook al enkele studentenjobs gedaan. In mijn vrije tijd denk
+              ik graag na over startups, waaruit dan ook al enkele MVP's zijn
+              voortgekomen. Sinds April 2023 ben ik dan ook co-founder van
+              <a href="https://artificieel.com" target="_blank">Artificieel</a>.
             </p>
           </div>
 
