Add VAT number and some small updates

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <i class="bi bi-emoji-smile"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="23"
+                  data-purecounter-end="28"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -314,7 +314,7 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="59"
+                  data-purecounter-end="64"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -334,7 +334,7 @@
                 <i class="bi bi-code-slash"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="4687"
+                  data-purecounter-end="5976"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -351,7 +351,7 @@
                 <i class="bi bi-filetype-py"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="27"
+                  data-purecounter-end="31"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -1044,10 +1044,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Locatie:</h4>
-                  <p>
-                    Wilskerkestraat 70, 8432 Leffinge <br />Daarnaast ben ik ook
-                    regelmatig in Leuven te vinden
-                  </p>
+                  <p>Wilskerkestraat 70, 8432 Leffinge</p>
                 </div>
 
                 <div class="email">
@@ -1066,6 +1063,12 @@
                   <p>
                     <a href="tel:+32491301271">+32 491 30 12 71</a>
                   </p>
+                </div>
+
+                <div class="address">
+                  <i class="bi bi-info-lg"></i>
+                  <h4>BTW nummer:</h4>
+                  <p>BE0804.425.750 (Sentronium)</p>
                 </div>
 
                 <iframe
